--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,48 @@
 site_name: 神佑释放
 nav:
     - 主页: index.md
-    - 材料: material.md
+    - 材料: 材料来源.md
+    - 生活职业:
+        - 料理: 
+            - 料理技能: 料理.md
+            - 料理制作: 料理制作.md
+        - 裁缝:
+            - 裁缝制作.md
     - 游戏攻略: 
-        - 副本: instance.md
+        - 副本: 
+            - 28级副本: instance28.md
+            - 30级限时副本-黑日殿堂: instance30.md
         - 精英BOSS: boss.md
 theme:
     name: 'material'
+    language: "zh"
+extra_css:
+  - stylesheets/extra.css
+markdown_extensions:
+    - admonition
+    - codehilite:
+        guess_lang: false
+        linenums: false
+    - toc:
+        permalink: true
+    - footnotes
+    - meta
+    - def_list
+    - pymdownx.arithmatex
+    - pymdownx.betterem:
+        smart_enable: all
+    - pymdownx.caret
+    - pymdownx.critic
+    - pymdownx.details
+    - pymdownx.emoji:
+        emoji_generator: !!python/name:pymdownx.emoji.to_png
+    - pymdownx.inlinehilite
+    - pymdownx.magiclink
+    - pymdownx.mark
+    - pymdownx.smartsymbols
+    - pymdownx.superfences
+    - pymdownx.tasklist
+    - pymdownx.tilde
 
 
 
