--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,9 +13,15 @@ nav:
             - 28级副本: instance28.md
             - 30级限时副本-黑日殿堂: instance30.md
         - 精英BOSS: boss.md
+    - 商人:
+        - 灵魂结晶商人.md
+    - 古代武器.md
 theme:
+    logo: img/logo_zh.png
     name: 'material'
     language: "zh"
+    features: 
+        - navigation.top
 extra_css:
   - stylesheets/extra.css
 markdown_extensions:
